# recsys_content

./: .gitignore  README.md  TODO.md  best_model.pt  businesses_processed.parquet  config.py  data.py  eda.ipynb  main.py  model.py  pyproject.toml  train.py
notebooks/: data_modeling.ipynb  eda_sql.ipynb
