[project]
name = "recsys_content"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.1",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "scikit-learn>=1.8.0",
    "pyarrow>=23.0.1",
    "optuna>=4.8.0",
    "implicit>=0.7.2",
    "sentence-transformers>=5.4.0",
    "pytorch-tabnet>=4.1.0",
    "coral-pytorch>=1.4.0",
]
