[project]
name = "recsys_content"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "duckdb>=1.1.3",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "lightgbm>=4.5.0",
    "matplotlib>=3.9.2",
    "numpy>=1.26.4,<2.0.0", 
    "pandas>=2.2.3",
    "polars>=1.12.0",
    "scikit-learn>=1.5.2",
    "pyarrow>=18.0.0",
    "optuna>=4.0.0",
    "sentence-transformers>=3.2.1",
    "pytorch-tabnet>=4.1.0",
    "coral-pytorch>=1.4.0",
]